@@ -195,5 +195,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Corrections autour de la commande postfix
   * [DEV] Commit -- 03/01/2017 @ 13:25:52
   * [DEV] Quelques modifications... pour que ça fonctionne
+  * [DEV] Correction sur env_create.sh
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
